syntax = "proto3";

package library_service;

option go_package = "pb/";

service Library {
    rpc AddBook(AddBookRequest) returns (AddBookResponse) {}
    rpc SearchBook(SearchBookRequest) returns (SearchBookResponse) {}
    rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse) {}
    rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse){}
} 
message Book {
    string book_id = 1;
    string title = 2;
    string author = 3;
    string year_published = 4;
}

message GetAllBooksRequest {
}

message GetAllBooksResponse{
    repeated Book books = 1;
}

message AddBookRequest{
    string title = 2;
    string author = 3;
    string year_published = 4;
}

message AddBookResponse{
    string book_id = 1;
}

message SearchBookRequest{
    string title = 1;
    string author = 2;
    string year_published = 3;
}

message SearchBookResponse{
    repeated Book books = 1;
}

message BorrowBookRequest{
    string book_id = 1;
    string user_id = 2;
}

message BorrowBookResponse{
    bool message = 1;
}